--- a/views/sign-in.njk
+++ b/views/sign-in.njk
@@ -3,7 +3,7 @@
 <!--CONTENT-->
 {% block content %}
 <main class="container-fluid" id="mainContainer">
-  <div class="container bg-light rounded pb-2 pt-2">
+  <div class="container bg-light rounded pb-2 pt-2 mt-2 border">
     <h4>Sign in</h4>
     <p>This is a demo site and for everyones convinience you can not register with username and password.</p>
     <p>There are 5 test accounts that you can use and play with.</p>
@@ -12,7 +12,7 @@
       <button class="btn btn-outline-dark" type="button" data-toggle="collapse" data-target="#collapseAccounts">
         Show test accounts
       </button>
-      <a href="/auth/twitter" class="btn btn-outline-dark" id="button-twitter">Sign in with Twitter</a>
+      <a href="/auth/github" class="btn btn-outline-dark">Sign in with Github</a>
     </p>
     <div class="collapse" id="collapseAccounts">
       <div class="card card-body">
