--- a/public/main.css
+++ b/public/main.css
@@ -43,7 +43,7 @@ body {
 @media (min-width: 992px) {
   .grid-sizer,
   .grid-item {
-    width: 33.333%;
+    width: 20%;
   }
 }
 
@@ -54,5 +54,45 @@ body {
 
 .grid-item img {
   display: block;
-  max-width: 100%;
+  width: 100%;
+}
+
+.main__button {
+  bottom: 100px;
+  width: 3.25rem;
+  height: 3rem;
+  float: right;
+  margin-right: 1rem;
+  opacity: 0.8;
+  font-size: 40px !important;
+  padding: 0 !important;
+  line-height: 0 !important;
+}
+
+.main__button:hover {
+  opacity: 1;
+}
+
+.modal__spinner {
+  width: 2rem;
+  height: 2rem;
+  border-top: 2px solid #007bff;
+  border-right: 2px solid transparent;
+  border-radius: 50%;
+  animation: rotation .8s linear infinite;
+  margin: auto;
+}
+
+.modal__text--loading {
+  text-align: center;
+  font-size: 14px;
+}
+
+@keyframes rotation{
+  from{
+    transform: rotate(0deg);
+  }
+  to{
+    transform: rotate(360deg);
+  }
 }
