--- a/views/index.njk
+++ b/views/index.njk
@@ -20,7 +20,7 @@
   <div id="content">
 
     <!--NAVBAR-->
-    <div class="container-fluid p-0">
+    <div class="container-fluid p-0 nav__div">
       <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-danger">
         <a href="/" class="navbar-brand">Definitely-not-Pinterest</a>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navItems">
@@ -46,19 +46,31 @@
     <!--CONTENT-->
     {% block content %}
     <main class="container-fluid bg-light" id="mainContainer">
+      {% if username %}
+      <h3>{{ username }}</h3>
+      {% endif %}
       <div class="grid">
         <div class="grid-sizer"></div>
         {% for item in items %}
         <div class="grid-item rounded border">
           <img src="{{ item.link }}" alt="{{ item.title }}" onerror="this.onerror=null;this.src='http://via.placeholder.com/300x200?text=Image+missing';">
-          <h5 class="m-1">{{ item.title }}</h5>
-          <p>
-            <a href="/user/{{ item.owner_link }}">{{ item.owner }}</a>
-          </p>
+          <h5 class="m-1">{{ item.title }}</h5>          
+          <a href="/user/{{ item.owner_link }}">{{ item.owner }}</a>          
+          {% if item.owner === user.username %}
+          <form method="post" action="/remove">
+          <input type="hidden" name="pin_id" value="{{ item.id }}">
+          <button class="btn btn-light float-right pin__button" type="submit" data-id="">Remove</button>
+          </form>
+          {% endif %}
         </div>
         {% endfor %}
       </div>
-      <button type="button" class="btn position-sticky rounded-circle main__button shadow" data-toggle="modal" data-target="#modalAddPin">+</button>
+      <button type="button" class="btn position-sticky rounded-circle main__button shadow" data-toggle="modal" data-tooltip="tooltip" data-placement="top" title="Add pin" data-target="#modalAddPin">
+      +
+      </button>
+      <button type="button" class="btn position-sticky rounded-circle main__button main__button--up shadow float-right" data-tooltip="tooltip" data-placement="top" title="Scroll to top">
+      <i class="material-icons">keyboard_arrow_up</i>
+      </button>
     </main>
 
     <!-- Modal -->
@@ -71,29 +83,32 @@
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
           {% if user %}
+          <div class="modal-body">
             <form id="form_addPin" method="post" action="/add">
               <div class="form-group">
                 <label for="input_link" class="col-form-label">Image link</label>
-                <input type="text" class="form-control" id="input_link" name="link" placeholder="ex. myawesomewebsite.com/myawesomeimage.jpg" required>
+                <input type="text" class="form-control" id="input_link" name="link" placeholder="ex. myawesomewebsite.com/myawesomeimage.jpg"
+                  required>
               </div>
               <div class="form-group">
                 <label for="input_title" class="col-form-label">Pin Title</label>
                 <input type="text" class="form-control" id="input_title" maxlength="90" required>
               </div>
-            </form>                        
+            </form>
             <div class="d-none modal__status-div">
               <p class="modal__text--loading">Adding pin, please wait</p>
               <div class="modal__spinner"></div>
             </div>
           </div>
-          <div class="modal-footer">            
+          <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
             <button type="submit" form="form_addPin" class="btn btn-primary" id="button_addPin">Add Pin</button>
           </div>
           {% else %}
-          <p class="text-center">Please sign in to add new pins</p>
+          <div class="modal-body">
+            <p class="text-center">Please sign in to add new pins</p>
+          </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
