refactor: fixed typo

--- a/views/sign-in.njk
+++ b/views/sign-in.njk
@@ -7,7 +7,7 @@
     <h4>Sign in</h4>
     <p>This is a demo site and for everyones convinience you can not register with username and password.</p>
     <p>There are 5 test accounts that you can use and play with.</p>
-    <p>If you want you can sign in with Github, in which case no personal information will be stored (except Twitter id and username)</p>
+    <p>If you want you can sign in with Github, in which case no personal information will be stored (except Github id and username)</p>
     <p>
       <button class="btn btn-outline-dark" type="button" data-toggle="collapse" data-target="#collapseAccounts">
         Show test accounts
